folders for each oppgave added

--- a/index.html
+++ b/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Test</title>
+    <title>Webapplikasjoner oblig 1</title>
+    <link rel="stylesheet" href="style.css" type="css/text"/> 
 </head>
 <body>
-    
-    <script src="index.js"></script>
+    <nav>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li ><a href="/oppgave0/oppgave_0.html">Oblig 0</a></li>
+            <li ><a href="/oppgave1/oppgave1.html">Oblig 1</a></li>
+            <li ><a href="/oppgave2/oppgave2.html">Oblig 2</a></li>
+            <li ><a href="/oppgave4/oppgave4.html">Oblig 4</a></li>
+        </ul>
+    </nav>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
